--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "datasets>=3.3.2",
+    "jupyter>=1.1.1",
     "python-dotenv>=1.0.1",
     "smolagents>=1.8.1",
     "torch>=2.6.0",
